# backend

./: .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  entrypoint.sh  environment.env  manage.py  pyproject.toml
courses/: models.py  router.py  serializers.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_course_image.py  0003_completedcourses.py  0004_rename_completedcourses_completedcourse.py
django_mai/: asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
django_mai/middleware/: CSRF.py  DRFAuthenticate.py
nginx/: default.conf  nginx.conf
users/: admin.py  exceptions.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_alter_user_avatar.py
